--- a/E/Epic/Vail_Resort_Template(T10)/ads/160x600/Kirkwood/160x600_Kirkwood.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/160x600/Kirkwood/160x600_Kirkwood.htm
@@ -169,6 +169,18 @@
                   cta.style.lineHeight = 1.2;
                   cta.style.height = "40px";
                 }
+              } else if(layout == 'multipleimagesoffer') {
+                content.styleProperties = "{'#cta': {x:'-50%',y:-23}, '#saleImage': {css:{display:'block'}}}";
+                var cta = document.querySelector("#cta");
+                cta.style.left = "50%";
+                cta.style.width = "auto";
+                cta.style.minWidth = "80px";
+                cta.style.maxWidth = "140px";
+                cta.innerHTML = '<span style="' + cta.dataset.style + '">' + content.ctaText + '</span>';
+                if(cta.querySelector('span').offsetHeight > 20) {
+                  cta.style.lineHeight = 1.2;
+                  cta.style.height = "40px";
+                }
               }
               // else if(layout == 'multipleimages' && !document.querySelector("#backgroundImage4")) {
               //   content.styleProperties = "{'#frameText': {x:-3, y:-11}, '#frameText span': {css:{textAlign:'left'}}, '#cta': {y:-20}, '#saleImage': {css:{display:'block'}}}";
