--- a/E/Epic/Vail_Resort_Template(T10)/ads/320x50/CrestedButte/320x50_CrestedButte.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/320x50/CrestedButte/320x50_CrestedButte.htm
@@ -161,6 +161,32 @@
                  frameText[i].style.width = '144px';
                  frameText[i].style.height = '24px';
                 }
+              } else if(layout == 'multipleimagesoffer') {
+                content.styleProperties = "{'#cta': {y:13}, '#saleImage': {css:{display:'block'}}}";
+                var cta = document.querySelector("#cta");
+                cta.style.left = "166px";
+                cta.style.width = "auto";
+                cta.style.minWidth = "55px";
+                cta.style.maxWidth = "90px";
+                cta.style.height = "16px";
+                var frameText = document.querySelectorAll("div[id^=frameText]");
+                for (var i = 0; i < frameText.length; i++){
+                 frameText[i].style.width = '144px';
+                 frameText[i].style.height = '24px';
+                }
+              } else if(layout == 'multipleimagesoffer') {
+                content.styleProperties = "{'#cta': {y:13}, '#saleImage': {css:{display:'block'}}}";
+                var cta = document.querySelector("#cta");
+                cta.style.left = "166px";
+                cta.style.width = "auto";
+                cta.style.minWidth = "55px";
+                cta.style.maxWidth = "90px";
+                cta.style.height = "16px";
+                var frameText = document.querySelectorAll("div[id^=frameText]");
+                for (var i = 0; i < frameText.length; i++){
+                 frameText[i].style.width = '144px';
+                 frameText[i].style.height = '24px';
+                }
               }
               // else if(layout == 'multipleimages' && !document.querySelector("#backgroundImage4")) {
               //   content.styleProperties = "{'#frameText': {x:-4, y:-3}, '#frameText span': {css:{textAlign:'left'}}, '#cta': {y:13}, '#saleImage': {css:{display:'block'}}}";
@@ -181,7 +207,7 @@
           }
         }, function(data){
           var adData = data[0], adClickUrl = adData['clickURL'];
-         
+
           var image = new Image();
           image.crossOrigin = 'Anonymous';
           image.onload = function() {
@@ -199,7 +225,7 @@
             document.body.removeChild(canvas);
           }
           image.src = adData['saleImage'];
-          
+
           ad.root.addEventListener("click", function(e) {
             if('button' in e.target.dataset) { } else { amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
           });
