--- a/E/Epic/Vail_Resort_Template(T10)/ads/320x50/Heavenly/320x50_Heavenly.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/320x50/Heavenly/320x50_Heavenly.htm
@@ -169,6 +169,7 @@
                 cta.style.minWidth = "55px";
                 cta.style.maxWidth = "90px";
                 cta.style.height = "16px";
+                cta.dataset.style = 'padding:2px 6px 0px;';
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
                  frameText[i].style.width = '144px';
@@ -194,7 +195,7 @@
           }
         }, function(data){
           var adData = data[0], adClickUrl = adData['clickURL'];
-         
+
           var image = new Image();
           image.crossOrigin = 'Anonymous';
           image.onload = function() {
@@ -212,7 +213,7 @@
             document.body.removeChild(canvas);
           }
           image.src = adData['saleImage'];
-          
+
           ad.root.addEventListener("click", function(e) {
             if('button' in e.target.dataset) { } else { amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
           });
