--- a/E/Epic/Vail_Resort_Template(T10)/ads/728x90/MtSnow/728x90_MtSnow.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/728x90/MtSnow/728x90_MtSnow.htm
@@ -155,22 +155,35 @@
                 textElement.parentNode.insertBefore(newTextElement, textElement.nextElementSibling);
               }
               if(layout == 'multipleimages') {
-                // content.styleProperties = "{'#cta': {y:25}}";
-                // var cta = document.querySelector("#cta");
-                // cta.style.left = "443px";
-                // cta.style.width = "auto";
-                // cta.style.minWidth = "80px";
-                // cta.style.maxWidth = "120px";
-                // cta.style.height = "27px";
-                // var frameText = document.querySelectorAll("div[id^=frameText]");
-                // for (var i = 0; i < frameText.length; i++){
-                //  frameText[i].style.width = '275px';
-                //  frameText[i].style.height = '46px';
-                //  frameText[i].style.fontSize = '18.2px';
-                //  frameText[i].style.lineHeight = '1.2';
-                // }
+                content.styleProperties = "{'#cta': {y:25}}";
+                var cta = document.querySelector("#cta");
+                cta.style.left = "443px";
+                cta.style.width = "auto";
+                cta.style.minWidth = "80px";
+                cta.style.maxWidth = "120px";
+                cta.style.height = "27px";
+                var frameText = document.querySelectorAll("div[id^=frameText]");
+                for (var i = 0; i < frameText.length; i++){
+                 frameText[i].style.width = '275px';
+                 frameText[i].style.height = '46px';
+                 frameText[i].style.fontSize = '18.2px';
+                 frameText[i].style.lineHeight = '1.2';
+                }
               } else if(layout == 'multipleimagesoffer') {
-                content.styleProperties = "{'#saleImage': {css:{display:'block'}}}";
+                content.styleProperties = "{'#cta': {y:25}, '#saleImage': {css:{display:'block'}}}";
+                var cta = document.querySelector("#cta");
+                cta.style.left = "443px";
+                cta.style.width = "auto";
+                cta.style.minWidth = "80px";
+                cta.style.maxWidth = "120px";
+                cta.style.height = "27px";
+                var frameText = document.querySelectorAll("div[id^=frameText]");
+                for (var i = 0; i < frameText.length; i++){
+                 frameText[i].style.width = '275px';
+                 frameText[i].style.height = '46px';
+                 frameText[i].style.fontSize = '18.2px';
+                 frameText[i].style.lineHeight = '1.2';
+                }
               }
               // else if(layout == 'multipleimages' && !document.querySelector("#backgroundImage4")) {
               //   content.styleProperties = "{'#frameText': {x:2, y:1}, '#frameText span': {css:{textAlign:'left'}}, '#cta': {y:25}, '#saleImage': {css:{display:'block'}}}";
