--- a/M/Microsoft/Microsoft_Office_SMB_Blanco_Creative/ads/300x600/z300x600.html
+++ b/M/Microsoft/Microsoft_Office_SMB_Blanco_Creative/ads/300x600/z300x600.html
@@ -106,6 +106,7 @@
         switch(adData.layout){
           case 'AllUpAccess' : adURL = 'AllUpAccess/O365_FY20Q4_SMB_USA_300x600_BAN_AllUp_Access_English_NA_NA_ANI_BN_NA_1.htm';break;
           case 'AllUpAI' : adURL = 'AllUpAI/O365_FY20Q4_SMB_USA_300x600_BAN_AllUp_AI_English_NA_NA_ANI_BN_NA_1.htm';break;
+          case 'AllUpCloud' : adURL = 'AllUpCloud/M365_FY21Q1_Opt_SMBCloud_USA_300x600_BAN_AllUpCloud_English_NA_Standard_ANI_BN_NA_1.htm';break;
           case 'Bookings' : adURL = 'Bookings/O365_FY20Q4_SMB_USA_300x600_BAN_Bookings_English_NA_NA_ANI_BN_NA_1.htm';break;
           case 'Excel' : adURL = 'Excel/O365_FY20Q4_SMB_USA_300x600_BAN_Excel_English_NA_NA_ANI_BN_NA_1.htm';break;
           case 'Exchange' : adURL = 'Exchange/O365_FY20Q4_SMB_USA_300x600_BAN_Exchange_English_NA_NA_ANI_BN_NA_1.htm';break;
