--- a/E/Epic/Vail_Resort_Template(T10)/ads/970x250/Keystone/970x250_Keystone.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/970x250/Keystone/970x250_Keystone.htm
@@ -176,7 +176,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#e52504";
+            ctx.fillStyle = "#ef4328";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
