--- a/E/Epic/Vail_Resort_Template(T10)/ads/160x600/Vail/160x600_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/160x600/Vail/160x600_Vail.htm
@@ -218,7 +218,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#F8951F";
+            ctx.fillStyle = "#009CDE";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
