--- a/C/Crocs/Crocs_SS20/ClassicLinedClog_FH20_Models/ads/728x90/728x90.html
+++ b/C/Crocs/Crocs_SS20/ClassicLinedClog_FH20_Models/ads/728x90/728x90.html
@@ -121,6 +121,10 @@
                 case 'jp_text_white': content.ctaImage = 'images/cta/CTA_White_EN_Shop_Now.png'; break;
                 case 'de_text_white': content.ctaImage = 'images/cta/CTA_White_DE_Shop_Now.png'; break;
                 case 'kr_text_white': content.ctaImage = 'images/cta/CTA_White_KR_Shop_Now.png'; break;
+                case 'en_text_black': content.ctaImage = 'images/cta/CTA_Black_EN_Shop_Now.png'; content.logoImage = 'images/728x90_Crocs_Logo_Black.png'; break;
+                case 'jp_text_black': content.ctaImage = 'images/cta/CTA_Black_EN_Shop_Now.png'; content.logoImage = 'images/728x90_Crocs_Logo_Black.png'; break;
+                case 'de_text_black': content.ctaImage = 'images/cta/CTA_Black_DE_Shop_Now.png'; content.logoImage = 'images/728x90_Crocs_Logo_Black.png'; break;
+                case 'kr_text_black': content.ctaImage = 'images/cta/CTA_Black_KR_Shop_Now.png'; content.logoImage = 'images/728x90_Crocs_Logo_Black.png'; break;
                 default: content.ctaImage = 'images/cta/CTA_EN_Show_Now.png';
               }
             });
