--- a/M/Microsoft/M365_Mobile_3D_Interactive_Image/ads.html
+++ b/M/Microsoft/M365_Mobile_3D_Interactive_Image/ads.html
@@ -162,8 +162,6 @@
               layout: data.Layout,
               textField1: data.textField1,
               textField2: data.textField2,
-              textField3: data.textField3,
-              textField4: data.textField4,
               ctaText: data.CTA,
               impressionTracker: "../../../../1x1.png?impressionTracker=" + Math.random(),
               clickTracker: "../../../../1x1.png?clickTracker=" + Math.random(),
@@ -182,9 +180,11 @@
         // '<div class="frame-wrapper"><iframe src="300x600/300x600.html" width="300" height="600" scrolling="no" frameborder="0" allowtransparency="true" hspace="0" vspace="0" marginwidth="0" marginheight="0"></iframe><div>300 x 600 Portrait</div></div>'+
         '<div class="frame-wrapper" id="ad160x600"></div>'+
         '<div class="frame-wrapper" id="ad300x600"></div>'+
+        '<div class="frame-wrapper" id="ad320x480"></div>'+
         // '<div class="frame-wrapper"><iframe src="300x600(OnFigure)/300x600.html" width="300" height="600" scrolling="no" frameborder="0" allowtransparency="true" hspace="0" vspace="0" marginwidth="0" marginheight="0"></iframe><div>300 x 600 Full Body</div></div>'+
         '<div style="display:inline-block;max-width:800px;text-align:left;">'+
           // '<div class="frame-wrapper"><iframe src="300x250/300x250.html" width="300" height="250" style="display:block;" scrolling="no" frameborder="0" allowtransparency="true" hspace="0" vspace="0" marginwidth="0" marginheight="0"></iframe><div>300 x 250</div></div>'+
+          '<div class="frame-wrapper" id="ad250x250"></iframe></div>'+
           '<div class="frame-wrapper" id="ad300x250"></iframe></div>'+
         //   '<div></div>'+
         //   '<div class="frame-wrapper"><iframe src="320x50/320x50.html" width="320" height="50" style="display:block;" scrolling="no" frameborder="0" allowtransparency="true" hspace="0" vspace="0" marginwidth="0" marginheight="0"></iframe><div>320 x 50</div></div>'+
