--- a/M/Microsoft/M365_Interactive_Cube/ads/250x250/3DCube_Mobile/M365_MobileFY21Q2ConsRefresh_USA_250x250_BAN_3DCubeINT_English_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Interactive_Cube/ads/250x250/3DCube_Mobile/M365_MobileFY21Q2ConsRefresh_USA_250x250_BAN_3DCubeINT_English_NA_Standard_ANI_BN_NA_1.htm
@@ -210,6 +210,7 @@ function handleComplete(evt,comp) {
 			bannerData.headline4_4 = eval(bannerData.textField4.split('^')[3]);
 			bannerData.headline4_5 = eval(bannerData.textField4.split('^')[4]);
 			bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"12px",-10,-1,"50","300", "center"] : '';
+			bannerData.CTAarrowVisible = [true, -4,0];
 			amoAdClick = function(id) {
 				parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl[id]);
 				if(bannerData.clickTracker) {
