--- a/M/Microsoft/M365_Interactive_Cube/ads/300x600/3DCube_Mobile/M365_MobileFY21Q2ConsRefresh_USA_300x600_BAN_3DCubeINT_English_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Interactive_Cube/ads/300x600/3DCube_Mobile/M365_MobileFY21Q2ConsRefresh_USA_300x600_BAN_3DCubeINT_English_NA_Standard_ANI_BN_NA_1.htm
@@ -204,6 +204,7 @@ function handleComplete(evt,comp) {
 			bannerData.headline4_6 = eval(bannerData.textField4.split('^')[5]);
 			bannerData.headline4_7 = eval(bannerData.textField4.split('^')[6]);
 			bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"12px",3,0,"50","300", "center"] : '';
+			bannerData.CTAarrowVisible = [true,0,0];
 			amoAdClick = function(id) {
 				parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl[id]);
 				if(bannerData.clickTracker) {
