--- a/M/Microsoft/M365_Interactive_Cube/ads/320x480/3DCube_Mobile/M365_MobileFY21Q2ConsRefresh_USA_320x480_BAN_3DCubeINT_English_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Interactive_Cube/ads/320x480/3DCube_Mobile/M365_MobileFY21Q2ConsRefresh_USA_320x480_BAN_3DCubeINT_English_NA_Standard_ANI_BN_NA_1.htm
@@ -199,6 +199,7 @@ function handleComplete(evt,comp) {
 			bannerData.headline4_1 = eval(bannerData.textField4.split('^')[0]);
 			bannerData.headline4_2 = eval(bannerData.textField4.split('^')[1]);
 			bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"12px",3,0,"50","300", "center"] : '';
+			bannerData.CTAarrowVisible = [true, 3,0];
 			amoAdClick = function(id) {
 				parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl[id]);
 				if(bannerData.clickTracker) {
