--- a/M/Microsoft/M365_Interactive_Cube/ads/728x90/3DCube_Desktop/M365_FY21Q2ConsRefresh_USA_728x90_BAN_3DCubeINT_English_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Interactive_Cube/ads/728x90/3DCube_Desktop/M365_FY21Q2ConsRefresh_USA_728x90_BAN_3DCubeINT_English_NA_Standard_ANI_BN_NA_1.htm
@@ -211,6 +211,7 @@ function handleComplete(evt,comp) {
 			bannerData.headline4_4 = eval(bannerData.textField4.split('^')[3]);
 			bannerData.headline4_5 = eval(bannerData.textField4.split('^')[4]);
 			bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"13.5px",7,0,"50","300", "center"] : '';
+			bannerData.CTAarrowVisible = [true, 10,-0.5];
 			amoAdClick = function(id) {
 				parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl[id]);
 				if(bannerData.clickTracker) {
