--- a/M/Microsoft/M365_Interactive_Cube/ads/160x600/z160x600.html
+++ b/M/Microsoft/M365_Interactive_Cube/ads/160x600/z160x600.html
@@ -80,6 +80,8 @@
           }
         }
         window.adData = content[0], window.adClickUrl = adData.url.split('^');
+        window.layout = adData.layout;
+        window.smartName = [layout + '|TessScreensCube', layout + '|ODCube', layout + '|PPTCube', layout + '|WordCube'];
         // document.querySelector('iframe').addEventListener("click", exitHandler.bind(this));
         // function exitHandler() {
         //   // window.open(clickTag);
