--- a/M/Microsoft/M365_Interactive_Cube/ads/728x90/3DCube_Mobile/M365_MobileFY21Q2ConsRefresh_USA_728x90_BAN_3DCubeINT_English_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Interactive_Cube/ads/728x90/3DCube_Mobile/M365_MobileFY21Q2ConsRefresh_USA_728x90_BAN_3DCubeINT_English_NA_Standard_ANI_BN_NA_1.htm
@@ -213,7 +213,7 @@ function handleComplete(evt,comp) {
 			bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"14px",7,0,"50","300", "center"] : '';
 			bannerData.CTAarrowVisible = [true, -1,-0.5];
 			amoAdClick = function(id) {
-				parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl[id]);
+				parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl[id], parentWindow.smartName[id]);
 				if(bannerData.clickTracker) {
 					var clickTrackers = bannerData.clickTracker.split('^');
 					clickTrackers.forEach(function(url){
@@ -221,6 +221,14 @@ function handleComplete(evt,comp) {
 								(new Image()).src = url;
 						}
 					});
+				}
+			}
+			amoAdInteraction = function(id) {
+				var parentWindows = window.parent.parent.window;
+				if (parentWindows && 'amoUtils' in parentWindows && 'onInteraction' in parentWindows.amoUtils) {
+					try {
+						parentWindows.amoUtils.onInteraction(parentWindow.layout, parentWindow.adData.feedData);
+					} catch (e) {}
 				}
 			}
 			if(bannerData.impressionTracker) {
@@ -595,6 +603,7 @@ startBanner = function(){
                         //console.log("currentRotation"+mesh.rotation.x+"  toLocation:"+toLocation+"  distance:"+distance +" throwdistance:"+throwdistance+ "  easeAmount:"+easeAmount)
                         gsap.to(mesh.rotation,2,{x:toLocation, ease:"elastic.out(1, 0.6)"});
                         //console.log("faceID:"+faceID)
+												amoAdInteraction(faceID);
                         if (!isIOS) vidID[0].pause()
                         if (!isIOS) vidID[1].pause()
                         if (!isIOS) vidID[2].pause()
