--- a/M/Microsoft/M365_Consumer_Refresh/ads/160x600/Word/M365_FY21Q2ConsRefresh_USA_160x600_BAN_Word_English_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Consumer_Refresh/ads/160x600/Word/M365_FY21Q2ConsRefresh_USA_160x600_BAN_Word_English_NA_Standard_ANI_BN_NA_1.htm
@@ -343,6 +343,7 @@ var startBanner = function(){
                         context.restore(); //CLEARS THE SPECIFIC CANVAS COMPLETELY FOR NEW DRAWING
                         vid.currentTime = 0;
                         vid.pause()
+                        vid.style.opacity = 0.1;
 						TweenMax.delayedCall(0.1,init)
 					}
 				}
