--- a/M/Microsoft/M365_Consumer_Refresh/ads/160x600/MoneyInExcel/M365_FY21Q2ConsRefresh_USA_160x600_BAN_MoneyInExcel_English_NA_Standard_ANI_BN_NA.htm
+++ b/M/Microsoft/M365_Consumer_Refresh/ads/160x600/MoneyInExcel/M365_FY21Q2ConsRefresh_USA_160x600_BAN_MoneyInExcel_English_NA_Standard_ANI_BN_NA.htm
@@ -262,7 +262,7 @@ function handleComplete(evt,comp) {
 <div id="rHit" style="display:block; position:absolute; top:0px; left:138px; width:22px; height:22px; z-index:100000 !important; cursor:pointer; "></div>
 
 <div id="animation_container" style="background-color:transparent; width:160px; height:600px;">
-    <video id="vid" preload="auto" src="./video/Excel_160x600.mp4" autoplay="false" webkit-playsinline="" playsinline type="video/mp4" width="160" height="600" muted="muted" style="position: absolute;  z-index:-5 "></video>
+    <video id="vid" preload="auto" src="./video/Excel_160x600.mp4" autoplay="false" webkit-playsinline="" playsinline type="video/mp4" width="160" height="600" muted="muted" style="position: absolute;  z-index:-5; opacity:0.1;"></video>
   <canvas id="canvas" width="160" height="600" style="position: absolute; display: block; background-color:transparent; cursor:pointer;" aria-label="Microsoft 3 6 5. Explore Money in Excel. Connect your financial accounts. Track spending. Get personalized alerts. A smart way to track your money. Track, organize, and plan your finances with Money in Excel. Buy now." role="img"></canvas>
 
 		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:160px; height:600px; position: absolute; left: 0px; top: 0px; display: block;">
