--- a/M/Microsoft/M365_Consumer_Refresh/ads/300x250/Word/M365_FY21Q2ConsRefresh_USA_300x250_BAN_Word_English_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Consumer_Refresh/ads/300x250/Word/M365_FY21Q2ConsRefresh_USA_300x250_BAN_Word_English_NA_Standard_ANI_BN_NA_1.htm
@@ -252,7 +252,7 @@ function handleComplete(evt,comp) {
 <div id="rHit" style="display:block; position:absolute; top:0px; left:278px; width:22px; height:22px; z-index:100000 !important; cursor:pointer; "></div>
 
 <div id="animation_container" style="background-color:transparent; width:300px; height:250px;">
-    <video id="vid" preload="auto" src="./video/Word_300x250.mp4" autoplay="false" webkit-playsinline="" type="video/mp4" width="300" height="250" muted="muted" style="position: absolute;  z-index:-5 "></video>
+    <video id="vid" preload="auto" src="./video/Word_300x250.mp4" autoplay="false" webkit-playsinline="" type="video/mp4" width="300" height="250" muted="muted" style="position: absolute;  z-index:-5; opacity:0.1;"></video>
   <canvas id="canvas" width="300" height="250" style="position: absolute; display: block; background-color:transparent; cursor:pointer;" aria-label="Microsoft 3 6 5. Bring out your best writer. Put your best words forward with smart features in Word.  Buy now." role="img"></canvas>
 
 		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:300px; height:250px; position: absolute; left: 0px; top: 0px; display: block;">
