--- a/M/Microsoft/M365_Consumer_Refresh/ads/728x90/FamilySafety/M365_FY21Q2ConsRefresh_USA_728x90_BAN_FamilySafety_English_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Consumer_Refresh/ads/728x90/FamilySafety/M365_FY21Q2ConsRefresh_USA_728x90_BAN_FamilySafety_English_NA_Standard_ANI_BN_NA_1.htm
@@ -19,7 +19,7 @@
 		text-rendering: geometricPrecision;
 	}
 	body {
-		background-color:#F2F2F2;
+		background-color:#FFFFFF;
 		overflow: hidden;
 	}
 </style>
@@ -271,7 +271,7 @@ function handleComplete(evt,comp) {
 <div id="rHit" style="display:block; position:absolute; top:0px; left:706px; width:22px; height:22px; z-index:100000 !important; cursor:pointer; "></div>
 
 <div id="animation_container" style="background-color:transparent; width:728px; height:90px;">
-    <video id="vid" preload="auto" src="./video/728x90.mp4" autoplay="false" webkit-playsinline="" playsinline type="video/mp4" width="728" height="90" muted="muted" style="position: absolute; z-index:-5 "></video>
+    <video id="vid" preload="auto" src="./video/728x90.mp4" autoplay="false" webkit-playsinline="" playsinline type="video/mp4" width="728" height="90" muted="muted" style="position: absolute; z-index:-5; opacity:0.1;"></video>
   <canvas id="canvas" width="728" height="90" style="position: absolute; display: block; background-color:transparent; cursor:pointer;" aria-label="Microsoft 3 6 5. Stay connected even when you're apart with location sharing and alerts. Protect what matters most. Empower your family to create healthy habits online and im the real world with Microsoft Family Safety. Learn more." role="img"></canvas>
 
 		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:728px; height:90px; position: absolute; left: 0px; top: 0px; display: block;">
