--- a/M/Microsoft/M365_Interactive_Cube/ads.html
+++ b/M/Microsoft/M365_Interactive_Cube/ads.html
@@ -164,6 +164,7 @@
               textField2: data.textField2,
               textField3: data.textField3,
               textField4: data.textField4,
+              textField5: data.textField5,
               ctaText: data.CTA,
               impressionTracker: "../../../../1x1.png?impressionTracker=" + Math.random(),
               clickTracker: "../../../../1x1.png?clickTracker=" + Math.random(),
