--- a/M/Microsoft/M365_Interactive_Cube/ads/728x90/z728x90.html
+++ b/M/Microsoft/M365_Interactive_Cube/ads/728x90/z728x90.html
@@ -36,6 +36,7 @@
         amo.registerVariation("textField2", "['<#505050>Share memories across devices','24.4px',479,18,'38','350', 'left']^['<#505050>•  Access your photos anytime, anywhere','15.6px',479,52,'17','350', 'left']^['<#505050>•  Organize, tag, and find your','15.6px',479,76,'17','350', 'left']^['<#505050>favorite memories','15.6px',492,94,'17','350', 'left']^['<#505050>•  Keep your files secured with','15.6px',782,52,'17','350', 'left']^['<#505050>Personal Vault','15.6px',795,70,'17','350', 'left']^['<#505050>+ more','15.6px',780,92,'17','350', 'left']");
         amo.registerVariation("textField3", "['<#505050>Be a hero storyteller','24.4px',479,21,'38','350', 'left']^['<#505050>•  Create quickly with smart templates','15.6px',479,57,'21','350', 'left']^['<#505050>•  Collaborate in real time','15.6px',479,82,'21','350', 'left']^['<#505050>•  Present on any device','15.6px',773,57,'21','350', 'left']^['<#505050>+ more','15.6px',771,82,'21','350', 'left']");
         amo.registerVariation("textField4", "['<#505050>Create memorable moments','24.4px',479,21,'38','350', 'left']^['<#505050>•  Make it memorable with 3D images','15.6px',479,57,'21','350', 'left']^['<#505050>•  Use smart tools for writing tips','15.6px',479,82,'21','350', 'left']^['<#505050>•  Turn your story into a webpage','15.6px',763,57,'21','350', 'left']^['<#505050>+ more','15.6px',761,82,'21','350', 'left']");
+        amo.registerVariation("textField5", "FY21Q2_ConsRefresh_BringBest_CubeAllUp_INT^FY21Q2_ConsRefresh_ShareMemories_CubeOD_INT^FY21Q2_ConsRefresh_HeroStoryteller_CubePPT_INT^FY21Q2_ConsRefresh_MemorableMoments_CubeWord_INT");
         amo.registerVariation("ctaText", "BUY NOW");
         // amo.registerVariation("ctaArrowVisibleFlag", "!{passthroughfield2}");
         amo.registerVariation("impressionTracker", "../../../1x1.png?impressionTracker=" + Math.random());
@@ -104,6 +105,7 @@
               if(trackingCode.length){ impressionTracker = impressionTracker.split('$(t_qp_TC_'+i+')').join(trackingCode); }
           }
         }
+        window.smartName = textField5 && textField5.split('^').length == 4 ? textField5.split('^').map(function(name) { return layout + '|' + name; }) : window.smartName;
         var adUrl = '';
         switch(adData.layout){
           case '3DCube_Desktop' : adURL = '3DCube_Desktop/M365_FY21Q2ConsRefresh_USA_728x90_BAN_3DCubeINT_English_NA_Standard_ANI_BN_NA_1.htm';break;
